--- a/week-07/day-03/BankOfSimba/BankOfSimba/Views/Simba/bankAccounts.cshtml
+++ b/week-07/day-03/BankOfSimba/BankOfSimba/Views/Simba/bankAccounts.cshtml
@@ -5,6 +5,7 @@
 <body>
     <table>
         <tr>
+            <th>Index</th>
             <th>Name</th>
             <th>AnimalType</th>
             <th>Balance</th>
@@ -13,6 +14,7 @@
         @for (int i = 0; i < Model.Count; i++)
         {
             <tr>
+                <td>@i</td>
                 <td>@Model[i].Name</td>
                 <td>@Model[i].AnimalType</td>
                 <td>@Model[i].Balance.ToString("0.00")</td>
