--- a/week-07/day-03/BankOfSimba/BankOfSimba/Views/Simba/bankAccounts.cshtml
+++ b/week-07/day-03/BankOfSimba/BankOfSimba/Views/Simba/bankAccounts.cshtml
@@ -44,5 +44,9 @@
             </tr>
         }
     </table>
+    <form action="/raiseCurrency/" method="post">
+        <input type="number" name="index" />
+        <button type="submit" value="Submit">Raise Currency</button>
+    </form>
 </body>
 </html>
