feat(bankOfSimba): Part 10

--- a/week-07/day-03/BankOfSimba/BankOfSimba/Views/Simba/bankAccounts.cshtml
+++ b/week-07/day-03/BankOfSimba/BankOfSimba/Views/Simba/bankAccounts.cshtml
@@ -45,8 +45,11 @@
         }
     </table>
     <form action="/raiseCurrency/" method="post">
-        <input type="number" name="index" />
+        <label>Index</label><input type="number" name="index" />
         <button type="submit" value="Submit">Raise Currency</button>
+    </form>
+    <form action="/addAnimal/" method="get">
+        <button type="submit" value="Submit">Add Bank Account</button>
     </form>
 </body>
 </html>
